<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".views.SignUpActivity"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:text="Sign Up"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="27dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/colorBackgroundAccent"
        android:textColor="@color/colorFrontAccent"
       />


    <EditText
        android:id="@+id/screenname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorBackgroundLight"
        android:textColorHint="@color/colorFrontAccent"
        />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginStart="24dp"
       android:layout_marginTop="5dp"
       android:layout_marginEnd="24dp"
       >

       <Spinner
           android:id="@+id/Gender_Select"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:layout_marginBottom="9dp"
           android:layout_marginRight="3dp"
           android:layout_gravity="center_vertical"
           android:text="Gender Select"
           android:visibility="visible"
           android:outlineSpotShadowColor="@color/colorFrontAccent"
           android:outlineAmbientShadowColor="@color/colorFrontAccent"
           android:textColor="@color/colorBackgroundLight"
           android:textColorHint="@color/colorFrontAccent"
           />

       <Spinner
           android:id="@+id/Team_Select"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:layout_marginLeft="3dp"
           android:layout_marginBottom="9dp"
           android:layout_gravity="center_vertical"
           android:text="Team Select"
           android:visibility="visible"
           android:outlineSpotShadowColor="@color/colorFrontAccent"
           android:outlineAmbientShadowColor="@color/colorFrontAccent"
           android:textColor="@color/colorBackgroundLight"
           android:textColorHint="@color/colorFrontAccent"
           />
   </LinearLayout>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/colorBackgroundAccent"
        android:textColor="@color/colorFrontAccent"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:hint="@string/prompt_confirm_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorBackgroundLight"
        android:textColorHint="@color/colorFrontAccent"
        />

    <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            android:elevation="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            android:outlineAmbientShadowColor="#FFA500"/>


    <Button
        android:id="@+id/signUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/round_button"
        android:enabled="true"
        android:gravity="center"
        android:elevation="21dp"
        android:text="@string/action_sing_up_short"

        android:textColor="@color/colorPrimaryGebeya"
        tools:text="Sign Up" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/response"
        android:textColor="@color/colorAccent"/>


    <ImageView
        android:id="@+id/gebeya_logo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:foregroundGravity="center"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/gebeya_logo_light_trasparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_editor_absoluteX="@dimen/cardview_default_elevation"
        tools:layout_editor_absoluteX="16dp" />
</LinearLayout>